<resources>
    <string name="app_name">BluetoothHid</string>
    <string name="action_settings">Settings</string>
    <string name="action_keyboard_title">Keyboard Toggle</string>
    <string name="action_check">(N)</string>
    <string name="action_tool_tip">Toggle to switch(Ctrl/Alt/Wn Keys) from click_each_time(Normal) state to key_pressed(Hold) state</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_autopair">Enable AutoPair</string>
    <string name="auto_pair_flag">autopairfl</string>
    <string name="title_screen_on">Screen Always On</string>
    <string name="action_ble_status_tool_tip">App not connected via bluetooth</string>

    <string name="screen_on_flag">screenonfl</string>
    <string name="title_activity_keyboard">KeyboardActivity</string>
    <string name="connected">App Connected via bluetooth</string>
    <string name="not_connected">App not connected via bluetooth</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="trackpad">trackPad</string>
    <string name="run">Run</string>
    <string name="script">script</string>
</resources>
