<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
            android:id="@+id/check_modifier_state"
            android:title="@string/action_check"
            android:tooltipText="@string/action_tool_tip"
            app:showAsAction="always"
            />

    <item
            android:id="@+id/ble_app_connection_status"
            android:title="@string/action_ble_status_tool_tip"
            android:icon="@drawable/ic_action_app_not_connected"
            android:tooltipText="@string/action_ble_status_tool_tip"
            app:showAsAction="always" />

    <item
            android:id="@+id/action_keyboard"
            android:icon="@drawable/ic_action_keyboard"
            android:title="@string/action_keyboard_title"
            app:showAsAction="always"
            />
</menu>