<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/settings_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="@string/title_settings"
        tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/disconnect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_disconnect" />

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/auto_pair_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_autopair" />

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/screen_on_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_screen_on" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>